kubernetes/oke/cluster/flux-instance/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.mafyuh.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  hostnames: ["flux.matt.fo"]
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
